# hazifeladat

./: CMakeLists.txt  main.cpp  matrix.h
Második házi/template/: main.cpp
Nagy/: README.md  main.cpp  realdata.txt
Utolso_Tabla/: CMakeLists.txt
elso hazi/illeszto/: main.cpp
elso hazi/int/: CMakeLists.txt  main.cpp
elso hazi/sq/: CMakeLists.txt  main.cpp
elso hazi/template/: main.cpp
harmadik hazi/illeszto/: main.cpp  main_2.cpp
negyedik_hazi/: main.cpp  vector2.h
otodik hazi/matrix/: main.cpp  matrix.h  time.txt
threads/: main.cpp  matrix.h  new_time.txt  time.txt  times.txt
